2010-03-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amreport.pl perl/Amanda/Report/postscript.pm: sort
	  postscript output by filenum, not hostname/diskname

2010-03-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amreport.pl perl/Amanda/Report/human.pm
	  perl/Amanda/Report/postscript.pm: stop counting an extra filemark per
	  dumpfile when calculating tape used

2010-03-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amreport.pl perl/Amanda/Report/postscript.pm: always
	  print the on-medi size of a dumpfile, not its total size

2010-03-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amreport.pl perl/Amanda/Report/human.pm
	  perl/Amanda/Report/postscript.pm: remove rounding when orig and
	  outsize are within 32k

2010-03-06  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amreport.pl: don't use undef for stdout, stderr when
	  invoking mail or lpr - some don't like to have their std streams
	  closed

2010-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amreport.pl: fix use of relative path for -l argument.

2010-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Report orig_size for FLUSH line.
	* installcheck/amreport.pl: check it.

2010-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/version.m4: Allow 2 digits version.

2010-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/amndmjob_main.c, ndmp-src/ndmjob_main.c:
	  include conffile.h, not config.h.

2010-03-05  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in config/amanda/progs.m4: AC_SUBST LPR-related
	  variables, and don't define them
	* perl/Amanda/Constants.pm.in: add LPR-related constants
	* installcheck/amreport.pl: lots of new tests, all hand-verified to
	  pass for the C amreport as well, sometimes with minor differences
	* installcheck/mock/lpr.pl: mock 'lpr' for installchecks
	* installcheck/mock/mail.pl: mock 'mail' for installchecks